<resources>
    <string name="app_name">Home</string>
    <string name="title_activity_search">Search</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_collection">Collection</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_question">Question</string>
    <string name="title_activity_recipe_info">RecipeInfo</string>
    <string name="title_activity_classification">classification</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
